[tool.poetry]
name = "koyeb-selenium"
version = "0.1.0"
description = ""
authors = ["bamjun <khy5116@naver.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.114.0"
uvicorn = "^0.30.6"
selenium = "^4.24.0"
selenium-wire = "^5.1.0"
packaging = "^24.1"
setuptools = "^74.1.2"
blinker = "^1.8.2"
requests = "^2.32.3"
webdriver-manager = "^4.0.2"


[tool.poetry.group.dev.dependencies]
black = "^24.8.0"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120

[tool.isort]
profile = "black"